# stocker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: GME.csv
inc/: QCandlestickChart.h  avapi.h  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mainwindow_ui.h  rapidcsv.h  stocker_api.hpp
include/: stockerAPI.hpp
src/: QCandlestickChart.cpp  avapi.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
